traveltrack-api/kyverno-policies/deny-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-latest-tag
spec:
  validationFailureAction: enforce
  rules:
    - name: disallow-latest-tag
      match:
        resources:
          kinds: ["Pod"]
          namespaces:
            - traveltrack
          selector:
            matchLabels:
              app: traveltrack-api
      validate:
        message: "No se permiten imágenes con tag ':latest'."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
